--- a/frontend/assets/style.css
+++ b/frontend/assets/style.css
@@ -48,9 +48,10 @@ table {
 }
 /** end reset css**/
 body {
+	background-color: #FFFEF8;
 	max-width: 1140px;
-	margin:auto;
-	font-family: 'Work Sans' ;
+	margin: auto;
+	font-family: 'Work Sans';
 	font-size: 14px;
 }
 header {
@@ -177,7 +178,7 @@ input[type="submit"]{
 	margin : 2em auto ;
 	width: 180px;
 	text-align: center;
-	border-radius: 60px ;
+	border-radius: 60px;
 }
 
 footer nav ul {
@@ -186,3 +187,59 @@ footer nav ul {
 	margin: 2em
 }
 
+/* LOGIN HTML */
+
+#login_container {
+	display: flex;
+    flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	margin-top: 150px;
+	gap: 40px;
+}
+
+#login_form {
+	display: flex;
+	flex-direction: column;
+}
+
+label[for="password"], label[for="email"] {
+	font-family: 'Work Sans';
+	font-size: 14px;
+	font-weight: 500;
+}
+
+label[for="password"] {
+	margin-bottom: 8px;
+	margin-top: 20px;
+}
+
+label[for="email"] {
+	margin-bottom: 8px;
+}
+
+#password, #email {
+	width: 380px;
+	height: 50px;
+	border: transparent;
+	background: #FFF;
+	box-shadow: 0px 3px 14px 0px rgba(0, 0, 0, 0.09);
+}
+
+.connect-button {
+	font-size : 16px;
+	font-style : normal;
+	border: 1px solid #1D6154;
+	padding: 10px 15px;
+	cursor: pointer;
+}
+
+#lost_password {
+	font-family: 'Work Sans';
+	font-size: 14px;
+	font-style: normal;
+	font-weight: 500;
+	text-decoration:underline;
+	text-decoration-line: underline;
+	margin-bottom: 355px;
+}
