--- a/frontend/assets/style.css
+++ b/frontend/assets/style.css
@@ -63,7 +63,12 @@ section {
 	margin: 50px 0
 }
 
-h1{
+a {
+	text-decoration: none;
+    cursor: pointer;
+}
+
+h1 {
 	display: flex;
 	flex-direction: column;
 	font-family: 'Syne';
@@ -79,7 +84,7 @@ h1 > span {
 ;
 }
 
-h2{
+h2 {
 	font-family: 'Syne';
 	font-weight: 700;
 	font-size: 30px;
@@ -146,7 +151,7 @@ margin: auto;
 	text-align: center;
 
 }
-#contact h2{
+#contact h2 {
 	margin-bottom: 20px;
 }
 #contact form {
@@ -170,7 +175,7 @@ margin: auto;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
 
-input[type="submit"]{
+input[type="submit"] {
 	font-family: 'Syne';
 	font-weight: 700;
 	color: white;
