--- a/frontend/assets/style.css
+++ b/frontend/assets/style.css
@@ -252,6 +252,7 @@ label[for="email"] {
 	text-decoration:underline;
 	text-decoration-line: underline;
 	margin-bottom: 355px;
+	margin-top: -35px;
 }
 
 /* HOMEPAGE FILTERS */
@@ -288,30 +289,38 @@ label[for="email"] {
 	color: #ffffff;
 }
 
-/* HOMEPAGE BUTTONS MODIFY 
+/* HOMEPAGE BUTTONS MODIFY */
 
-.btn_open_modal,
 .btn_portfolio {
 	display: flex;
     background: transparent;
     border: none;
     cursor: pointer;
-}
-*/
 
-/* MODAL */
+	font-size: 15px;
+	font-weight: 200;
+	width: 15px;
+	height: 15px;
+}
+
+
+/* MODAL PORTFOLIO */
 /* The Modal (background) */
 .modal {
-	display: none; /* Hidden by default */
+	display: none; 
 	position: fixed; /* Stay in place */
 	z-index: 1; /* Sit on top */
-	left: 0;
-	top: 0;
 	width: 100%; /* Full width */
 	height: 100%; /* Full height */
 	overflow: auto; /* Enable scroll if needed */
-	background-color: rgb(0,0,0); /* Fallback color */
-	background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+	background-color: #FFF;
+
+	padding: 10px;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	max-width: 610px;
+	border-radius: 10px;
   }
   
   /* Modal Content/Box */
@@ -319,7 +328,6 @@ label[for="email"] {
 	background-color: #fefefe;
 	margin: 15% auto; /* 15% from the top and centered */
 	padding: 20px;
-	border: 1px solid #888;
 	width: 80%; /* Could be more or less, depending on screen size */
   }
   
@@ -337,3 +345,10 @@ label[for="email"] {
 	text-decoration: none;
 	cursor: pointer;
   }
+
+  /* ALL PAGES - little details */
+
+li.legal_mentions {
+    font-size: 1em;
+	padding-top: 20px;
+}
