login page also has 'main_container' now, so it works fine'

--- a/frontend/assets/style.css
+++ b/frontend/assets/style.css
@@ -256,7 +256,7 @@ label[for="email"] {
 
 /* HOMPAGE */
 
-.main-container {
+.main_container {
 	max-width: 1140px; /* Apply your default max-width */
 	margin: 0 auto; /* Center the content within the page */
 }
