--- a/frontend/assets/style.css
+++ b/frontend/assets/style.css
@@ -354,16 +354,20 @@ color: white;
 /* end of edit mode */
 
 /* MODAL PORTFOLIO */
-/* The Modal (background) */
+
 .modal {
-	display: none; 
+	background-color: #FFF;
+	margin: 5% auto;
+	width: 80%; /* Could be more or less, depending on screen size */
+
+	display: none;
+	flex-direction: column;
+	align-items: center;
 	/* Stays in place */
 	position: fixed;
 	z-index: 1; 
-	width: 100%; 
 	height: 70%; 
 	overflow: auto; /* Enable scroll if needed */
-	background-color: #FFF;
 
 	padding: 10px;
 	top: 50%;
@@ -373,31 +377,46 @@ color: white;
 	border-radius: 10px;
   }
   
-/* Modal Content/Box */
-.modal-content {
-background-color: #fefefe;
-margin: 5% auto;
-width: 80%; /* Could be more or less, depending on screen size */
-}
-
-.modal-content h3 {
+.modal h3 {
 	color: black;
 	text-align: center;
     font-family: 'Work Sans';
     font-size: 26px;
-    font-style: normal;
     font-weight: 400;
-    line-height: normal;
 	margin-top: 10px;
 }
 
-/* The Close Button */
+.addPhotoBtn{
+	width: 230px;
+	height: 36px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color:#1D6154;
+	border-radius: 60px;
+	margin-top: 40px;
+	margin-bottom: 25px;
+}
+
+.addPhotoBtn:hover{
+	box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
+	cursor: pointer;
+}
+
+.addPhotoBtn p{
+	font-family: 'Syne';
+	color: white;
+	font-weight: 700;
+}
+
 .close {
+	align-self: flex-end;
 	color: black;
-	float: right;
 	font-size: 26px;
     font-weight: bold;
-    margin-top: -10px;
+    margin-top: 10px;
+	margin-right: 30px;
+	cursor: pointer;
 }
 
 .close:hover,
@@ -405,10 +424,11 @@ width: 80%; /* Could be more or less, depending on screen size */
 	color: black;
 	text-decoration: none;
 	cursor: pointer;
+	scale: 1.2;
 }
 
-/* ALL PAGES - little details */
 
+/* ALL PAGES - little details */
 footer {
 	background-color: white;
     height: 50px;
