--- a/frontend/assets/style.css
+++ b/frontend/assets/style.css
@@ -205,58 +205,58 @@ footer nav ul {
 
 #login_container {
 	display: flex;
-    flex-direction: column;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	margin-top: 150px;
 	gap: 40px;
-}
-
+  }
+  
 #login_form {
-	display: flex;
-	flex-direction: column;
+display: flex;
+flex-direction: column;
 }
 
 label[for="password"], label[for="email"] {
-	font-family: 'Work Sans';
-	font-size: 14px;
-	font-weight: 500;
+font-family: 'Work Sans';
+font-size: 14px;
+font-weight: 500;
 }
 
 label[for="password"] {
-	margin-bottom: 8px;
-	margin-top: 20px;
+margin-bottom: 8px;
+margin-top: 20px;
 }
 
 label[for="email"] {
-	margin-bottom: 8px;
+margin-bottom: 8px;
 }
 
 #password, #email {
-	width: 380px;
-	height: 50px;
-	border: transparent;
-	background: #FFF;
-	box-shadow: 0px 3px 14px 0px rgba(0, 0, 0, 0.09);
+width: 380px;
+height: 50px;
+border: transparent;
+background: #FFF;
+box-shadow: 0px 3px 14px 0px rgba(0, 0, 0, 0.09);
 }
 
 .connect-button {
-	font-size : 16px;
-	font-style : normal;
-	border: 1px solid #1D6154;
-	padding: 10px 15px;
-	cursor: pointer;
+font-size: 16px;
+font-style: normal;
+border: 1px solid #1D6154;
+padding: 10px 15px;
+cursor: pointer;
 }
 
 #lost_password {
-	font-family: 'Work Sans';
-	font-size: 14px;
-	font-style: normal;
-	font-weight: 500;
-	text-decoration:underline;
-	text-decoration-line: underline;
-	margin-bottom: 355px;
-	margin-top: -35px;
+font-family: 'Work Sans';
+font-size: 14px;
+font-style: normal;
+font-weight: 500;
+text-decoration: underline;
+text-decoration-line: underline;
+margin-bottom: 355px;
+margin-top: -35px;
 }
 
 /* HOMEPAGE */
@@ -266,33 +266,47 @@ label[for="email"] {
 	margin: 0 auto; /* Center the content within the page */
 }
 
+/* HOMEPAGE */
+
+.main_container {
+  max-width: 1140px; /* Apply your default max-width */
+  margin: 0 auto; /* Center the content within the page */
+}
+
+/* HOMEPAGE */
+
+.main_container {
+	max-width: 1140px;
+	margin: 0 auto;
+  }
+  
 /* HOMEPAGE FILTERS */
 
 .filters {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-	margin-bottom: 50px;
+display: flex;
+justify-content: center;
+gap: 10px;
+margin-bottom: 50px;
 }
 
 .btn_filters {
-	display: flex;
-    align-items: center;
-	font-size: 18px;
-    font-family: 'Syne';
-    font-style: normal;
-    font-weight: 700;
-	border: solid #1D6154 1px;
-	border-radius: 50px;
-	color: #1D6154;
-	height: 35px;
-	cursor: pointer;
-	padding: 0 15px 0 15px;
+display: flex;
+align-items: center;
+font-size: 18px;
+font-family: 'Syne';
+font-style: normal;
+font-weight: 700;
+border: solid #1D6154 1px;
+border-radius: 50px;
+color: #1D6154;
+height: 35px;
+cursor: pointer;
+padding: 0 15px 0 15px;
 }
 
 .btn_filters:hover {
-	background: #1D6154;
-	color: #ffffff;
+background: #1D6154;
+color: #ffffff;
 }
 
 .btn_active {
