--- a/frontend/assets/modal.css
+++ b/frontend/assets/modal.css
@@ -7,8 +7,8 @@
 	display: none;
 	flex-direction: column;
 	align-items: center;
-	/* Stays in place */
 	position: fixed;
+	/* Stays in place */
 	z-index: 1; 
 	height: 70%; 
 	overflow: auto; /* Enable scroll if needed */
@@ -43,6 +43,7 @@
 }
 
 .addPhotoBtn:hover{
+	filter: brightness(1.1);
 	box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
 	cursor: pointer;
 }
@@ -158,31 +159,34 @@
 }
 
 .top-bar {
-	width: 100%;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    align-items: center;
 }
 
-.photoModal i {
+.photoModal .arrow {
     align-self: flex-start;
     color: black;
     font-size: 25px;
-    margin-left: 10px;
+    left: 25px;
     cursor: pointer;
+    position: relative;
+    top: 10px;
 }
 
-.photoModal i:hover {
+.photoModal .arrow:hover {
 	scale: 1.2;
 }
 
 .photoModal .closeBtn {
-	align-self: flex-end;
-	color: black;
+    align-self: flex-end;
+    color: black;
     font-size: 35px;
     font-weight: bold;
     margin-right: 25px;
-	cursor: pointer;
+    cursor: pointer;
 } 
 
 .photoModal .closeBtn:hover{
@@ -201,6 +205,70 @@
     font-weight: 400;
 }
 
+/* AJOUT PHOTO VIGNETTE FORM ETC */
+.addPhotoForm {
+	margin-top: 40px;
+  }
+  
+  .addPhotoContainer {
+	width: 420px;
+	height: 169px;
+	background-color: #E8F1F7;
+	border-radius: 3px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	position: relative;
+  }
 
+  .thumbnail {
+  font-size: 46px;
+  transform: scaleX(1.2);
+  color: #E8F1F7;
+  -webkit-text-stroke: 2px;
+  -webkit-text-stroke-color: #B9C5CC;
+  position: absolute;
+  top: 28px;
+}
 
+.uploadPhotoButtonText{
+	color: #306685;
+	text-align: center;
+	cursor: default;
+	position:absolute;
+	top:10px;
+	left:33px;
+}
+
+.photoModal hr {
+	color: #B3B3B3;
+	border: 1px solid #B3B3B3;
+	width: 420px;
+	height: 0px;
+	margin: auto;
+}
+/* see if we can put the two hrs together later ? */
+
+.sendButton{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: #A7A7A7;
+	width: 235px;
+	height: 35px;
+	border-radius: 60px;
+	border: 0;
+}
+
+.sendButton:hover{
+	filter: brightness(1.1);
+	box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
+	cursor: pointer;
+}
+
+.sendButtonText{
+	color: #FFFFFF;
+	font-family: 'Syne';
+}
 /* END MODAL ADD PHOTO*/
