--- a/frontend/assets/style.css
+++ b/frontend/assets/style.css
@@ -99,6 +99,7 @@ nav li {
 	padding: 0 10px;
 	font-size: 1em;
 	gap: 10px;
+	cursor: pointer;
 }
 
 a {
@@ -108,6 +109,7 @@ a {
 a:hover{
 	color: #B1663C;
 	text-decoration: none;
+	cursor: pointer;
 }
 
 li {
