all css for addPhotoModl : done !'

--- a/frontend/assets/modal.css
+++ b/frontend/assets/modal.css
@@ -201,45 +201,77 @@
 	text-align: center;
     font-family: 'Work Sans';
     font-size: 26px;
-    margin-top: 15px;
+    margin-top: 35px;
     font-weight: 400;
 }
 
-/* AJOUT PHOTO VIGNETTE FORM ETC */
+/* AJOUT PHOTO THUMBNAIL, FORM, IMG PREVIEW, ... */
 .addPhotoForm {
+	display: flex;
+    flex-direction: column;
 	margin-top: 40px;
+	gap: 15px;
   }
-  
+
+  .addPhotoForm input,
+  .categorySelect {
+	font-size: 14px;
+    font-family: 'Work Sans';
+    padding-left: 15px;
+    font-weight: 400;
+    color: #444444;
+
+	height: 50px;
+	border: none;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+	cursor: pointer;
+  }
+
+.titleLabel{
+	margin-top: 25px;
+}
+
   .addPhotoContainer {
-	width: 420px;
-	height: 169px;
-	background-color: #E8F1F7;
-	border-radius: 3px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	position: relative;
+	width: 420px;
+    height: 165px;
+	background-color: #E8F1F7;
+	border-radius: 3px;
   }
 
   .thumbnail {
-  font-size: 46px;
-  transform: scaleX(1.2);
-  color: #E8F1F7;
-  -webkit-text-stroke: 2px;
-  -webkit-text-stroke-color: #B9C5CC;
-  position: absolute;
-  top: 28px;
+	position: absolute;
+    font-size: 60px;
+    color: #B9C5CC;
+    top: 20px;
 }
 
-.uploadPhotoButtonText{
-	color: #306685;
-	text-align: center;
-	cursor: default;
-	position:absolute;
-	top:10px;
-	left:33px;
+.addPhotoButtonText{
+	position: relative;
+    display: inline-block;
+    background-color: #CBD6DC;
+    color: #306685;
+    text-align: center;
+	font-weight: 500;
+	line-height: 35px;
+	font-family: 'Syne';
+    width: 170px;
+    height: 35px;
+    border-radius: 50px;
+    top: 22px;
+    cursor: pointer;
 }
+
+.addPhotoDescription {
+    position: absolute;
+    top: 125px;
+    font-size: 10px;
+}
+
 
 .uploadPhotoButton{
 	opacity: 0;
@@ -253,6 +285,8 @@
 }
 
 .photoModal hr {
+    position: absolute;
+    bottom: 130px;
 	color: #B3B3B3;
 	border: 1px solid #B3B3B3;
 	width: 420px;
@@ -266,6 +300,9 @@
 	justify-content: center;
 	align-items: center;
 	background-color: #A7A7A7;
+    font-size: 15px;
+	margin-top: 80px;
+	margin-left: 90px; /* to change later - so that it's centered */
 	width: 235px;
 	height: 35px;
 	border-radius: 60px;
@@ -283,5 +320,18 @@
 	font-family: 'Syne';
 }
 
+.imagePreview {
+	position: absolute;
+    top: 0;
+	height: 165px;
+    max-width: 420px;
+    object-fit: cover;
+    z-index: 1;
+}
+
 
 /* END MODAL ADD PHOTO*/
+
+/*  TO DO :
+- centrer ".sendbutton" 
+*/
