--- a/frontend/assets/style.css
+++ b/frontend/assets/style.css
@@ -146,13 +146,23 @@ li.focus {
 #introduction h2 {
 	margin-bottom: 1em;
 }
+#introduction h2:hover{
+	font-size: 32px;
+    text-shadow: 0px 5px 0px rgba(0, 0, 0, 0.20);
+}
 
 #introduction p {
 	margin-bottom: 0.5em;
 }
+
 #portfolio h2 {
 	text-align: center;
 	margin-bottom: 1em;
+
+}
+#portfolio h2:hover {
+	font-size : 32px;
+    text-shadow: 0px 5px 0px rgba(0, 0, 0, 0.20);
 }
 .gallery {
 	width: 100%;
@@ -164,6 +174,10 @@ li.focus {
 
 .gallery img {
 	width: 100%;
+}
+.gallery img:hover {
+    border: 1px solid #1D6154;
+	cursor: pointer;
 }
 
 #contact {
