--- a/frontend/assets/modal.css
+++ b/frontend/assets/modal.css
@@ -330,6 +330,19 @@
 }
 
 
+.overlay {
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+	z-index: 1; /* Ensure the overlay is on top of other content */
+	cursor: pointer;
+  }
+
+
 /* END MODAL ADD PHOTO*/
 
 /*  TO DO :
